--- a/WEB_UI/Areas/IDSMORS/Views/Home/Index.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/Index.cshtml
@@ -46,5 +46,14 @@
                 </div>
             </a>
         </li>
+        <li>
+            <a href='@Url.Action("ReportWagons", "Home", new { area = "IDSMORS" })'>
+                <span class="ca-icon">I</span>
+                <div class="ca-content">
+                    <h2 class="ca-main">@IDSMORSResource.report_title</h2>
+                    <h3 class="ca-sub">@IDSMORSResource.report_description</h3>
+                </div>
+            </a>
+        </li>
     </ul>
 </div>
