--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -394,8 +394,7 @@
                                             </div>
                                             <div class="col-md-4 mb-1 text-left">
                                                 <label for="card_vag_name_adm" class="col-form-label">@IDSRWTResource.title_name_adm:</label>
-                                                <input type="text" class="form-control" id="card_vag_name_adm" name="card_vag_name_adm" data-mode="view" data-edit="" data-form="transceiver">
-                                                <select class="form-control" id="card_vag_name_adm" name="card_vag_name_adm" data-mode="edit" data-edit="" data-form="transceiver"></select>
+                                                <select class="form-control" id="card_vag_name_adm" name="card_vag_name_adm" data-mode="all" data-edit="" data-form="transceiver"></select>
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
